syntax = "proto3";

package transaction;

option go_package = "./proto";


service TransactionService {
  rpc CreateTransaction (CreateTransactionRequest) returns (CreateTransactionResponse);
  rpc GetTransactionsByUser (GetTransactionsByUserRequest) returns (GetTransactionsByUserResponse);
}

enum TransactionStatus {
  APPROVED = 0;
  PENDING = 1;
  DECLINED = 2;
}

message Transaction {
  string id = 1;
  string sender_id = 2;
  string sender_account_id = 3;
  string receiver_id = 4;
  string receiver_account_id = 5;
  double amount = 6;
  string currency = 7;
  TransactionStatus status = 8;
  string note = 9;
  string payment_code = 10;
  string model = 11;
  string call_number = 12;
  string created_at = 13; 
}

message CreateTransactionRequest {
  string sender_id = 1;
  string sender_account_id = 2;
  string receiver_id = 3;
  string receiver_account_id = 4;
  double amount = 5;
  string currency = 6;
  string note = 7;
  string payment_code = 8;
  string model = 9;
  string call_number = 10;
}

message CreateTransactionResponse {
  Transaction transaction = 1;
}

message GetTransactionsByUserRequest {
  string user_id = 1;
}

message GetTransactionsByUserResponse {
  repeated Transaction transactions = 1;
}